updated all pages

--- a/about/about.html
+++ b/about/about.html
@@ -78,7 +78,7 @@
 
     </section>
 
-    <section class="about-mission-vision-container">
+    <section class="about-mission-vision-container reveal">
       
       <div class="mission-vision-card">
         <h2 class="mission-vision-title"> Our Mission </h2>
@@ -94,6 +94,181 @@
         fitness leaders. </p>
       </div>
     </section>
+
+    <!-- TRANSFORMATION SECTION -->
+<section class="about-transform-container">
+  <h2 class="about-section-title">Real Transformations</h2>
+  <p class="about-section-subtitle">
+    Results built through discipline, structure, and consistency.
+  </p>
+
+  <div class="transform-grid">
+
+    <div class="transform-card">
+      <img src="../Images/transform-1.jpg" alt="Member Transformation" class="open-lightbox">
+      <div class="transform-content">
+        <h3>12kg Fat Loss</h3>
+        <p>Lost 12kg in 6 months through structured training and nutrition discipline.</p>
+        <span>- Mark R.</span>
+      </div>
+    </div>
+
+    <div class="transform-card">
+      <img src="../Images/transform-2.jpg" alt="Member Transformation" class="open-lightbox">
+      <div class="transform-content">
+        <h3>+40kg Strength Increase</h3>
+        <p>Increased bench press by 40kg in 8 months with Alpha programming.</p>
+        <span>- James T.</span>
+      </div>
+    </div>
+
+    <div class="transform-card">
+      <img src="../Images/transform-3.jpg" alt="Member Transformation" class="open-lightbox">
+      <div class="transform-content">
+        <h3>Confidence Rebuilt</h3>
+        <p>More than physical change — gained confidence and discipline for life.</p>
+        <span>- Sarah L.</span>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<!-- TRAINING PHILOSOPHY -->
+<section class="philosophy-container reveal">
+  <h2 class="about-section-title">Our Training Philosophy</h2>
+
+  <div class="philosophy-grid">
+
+    <div class="philosophy-card">
+      <h3>Discipline Over Motivation</h3>
+      <p>We build habits that last. Motivation fades. Discipline stays.</p>
+    </div>
+
+    <div class="philosophy-card">
+      <h3>Structured Programming</h3>
+      <p>Every workout has purpose. No random training — only progression.</p>
+    </div>
+
+    <div class="philosophy-card">
+      <h3>Progressive Over Ego</h3>
+      <p>We focus on correct form and smart growth, not lifting for show.</p>
+    </div>
+
+    <div class="philosophy-card">
+      <h3>Community First</h3>
+      <p>We rise together. No judgment. No pressure. Only growth.</p>
+    </div>
+
+  </div>
+</section>
+
+<!-- EXPANSION TIMELINE -->
+<section class="timeline-container reveal">
+  <h2 class="about-section-title">Alpha Expansion Journey</h2>
+
+  <div class="timeline">
+
+    <div class="timeline-item reveal-item">
+      <span class="timeline-year">2019</span>
+      <p>Alpha Gym founded in Caloocan City.</p>
+    </div>
+
+    <div class="timeline-item reveal-item">
+      <span class="timeline-year">2021</span>
+      <p>Reached 500+ active members milestone.</p>
+    </div>
+
+    <div class="timeline-item reveal-item">
+      <span class="timeline-year">2023</span>
+      <p>Expanded training programs and upgraded facility.</p>
+    </div>
+
+    <div class="timeline-item reveal-item">
+      <span class="timeline-year">2025</span>
+      <p>Opened multiple branches across the city.</p>
+    </div>
+
+    <div class="timeline-item reveal-item">
+      <span class="timeline-year">2026</span>
+      <p>Launched Alpha Barber Lounge inside selected branches.</p>
+    </div>
+
+  </div>
+</section>
+
+
+<!-- FOUNDER MESSAGE -->
+<section class="founder-container reveal">
+  <div class="founder-card">
+    <h2>Message from the Founder</h2>
+    <p>
+      Alpha Gym was built on one belief — discipline builds strength,
+      and strength builds character. What started as a small space
+      in Caloocan became a growing community of individuals who refuse
+      to stay average.
+    </p>
+
+    <p>
+      This isn’t just a gym. It’s a proving ground. Every member who walks
+      through our doors commits to growth — physically and mentally.
+      We don’t chase motivation. We build discipline.
+    </p>
+
+    <h4 class="founder-signature">— Founder, Alpha Gym</h4>
+  </div>
+</section>
+
+
+
+    <!-- AMENITIES / FACILITIES -->
+<section class="amenities-container reveal">
+  <h2 class="amenities-title">Facilities & Amenities</h2>
+  <p class="amenities-subtitle">
+    Everything you need in one premium space — train, recover, and refresh.
+  </p>
+
+  <div class="amenities-grid">
+
+    <div class="amenity-card">
+      <div class="amenity-icon">🏋️</div>
+      <h3>Strength Zone</h3>
+      <p>Power racks, free weights, and serious equipment for real progress.</p>
+    </div>
+
+    <div class="amenity-card">
+      <div class="amenity-icon">🔥</div>
+      <h3>Conditioning Area</h3>
+      <p>Functional training space for stamina, mobility, and performance.</p>
+    </div>
+
+    <div class="amenity-card">
+      <div class="amenity-icon">🥊</div>
+      <h3>Boxing / Combat</h3>
+      <p>Optional combat training for conditioning and confidence.</p>
+    </div>
+
+    <div class="amenity-card">
+      <div class="amenity-icon">💈</div>
+      <h3>Barber Shop Inside</h3>
+      <p>Train hard, look sharp. Cuts, fades, and grooming inside Alpha.</p>
+    </div>
+
+    <div class="amenity-card">
+      <div class="amenity-icon">🚿</div>
+      <h3>Clean & Sanitized</h3>
+      <p>Well-maintained areas and regular cleaning for a premium experience.</p>
+    </div>
+
+    <div class="amenity-card">
+      <div class="amenity-icon">🤝</div>
+      <h3>Community Culture</h3>
+      <p>Respectful environment — beginner friendly, athlete approved.</p>
+    </div>
+
+  </div>
+</section>
+
 
     <section class="about-values">
       <h2> Our Core Values </h2>
@@ -135,17 +310,17 @@
     <section class="about-stats-container">
       <h2 class="about-stats-title"> Alpha Milestones </h2>
       <div class="stat-box">
-        <h2> 500+ </h2>
+        <h2 data-target="500"> 500+ </h2>
         <p> Active Members </p>
       </div>
 
       <div class="stat-box">
-        <h2> 5+ </h2>
+        <h2 data-target="5" class="about-stats-title"> 5+ </h2>
         <p> Certified Trainers </p>
       </div>
 
       <div class="stat-box">
-        <h2> 4 </h2>
+        <h2 data-target="4"> 4 </h2>
         <p> Years Serving Caloocan </p>
       </div>
     </section>
@@ -168,5 +343,10 @@
   </main>
   <script src="about.js"></script>
   <script src="/common.js"></script>
+
+  <div id="lightbox" style="display:none;">
+  <span id="lightboxClose">&times;</span>
+  <img id="lightboxImg" src="" alt="Zoomed Image" />
+</div>
 </body>
 </html>
