--- a/index.html
+++ b/index.html
@@ -209,6 +209,212 @@
       </div>
     </section>
 
+    <!-- BRANCHES -->
+<!-- BRANCHES (LUXURY) -->
+<section class="branches-container" id="branches">
+  <div class="branches-header">
+    <h2 class="branches-title">Our Branches</h2>
+    <p class="branches-subtitle">Luxury space. Alpha intensity. Five locations to level up.</p>
+  </div>
+
+  <div class="branches-grid">
+
+    <article class="branch-card"
+      data-branch="Alpha Gym Maypajo – Main Branch"
+      data-img="./Images/branch-main.jpg"
+      data-map="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3860.262802383937!2d120.97298157517585!3d14.641017876085758!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b55e5088d4d1%3A0x27dd5f121caca43d!2sAlpha%20Grind%20Lab%20-%20Maypajo%20Caloocan!5e0!3m2!1sen!2sph!4v1771460087852!5m2!1sen!2sph">
+      <div class="branch-media">
+        <img src="./Images/alpha-pic-1.png" alt="Alpha Gym Main Branch" loading="lazy">
+        <div class="branch-gradient"></div>
+        <div class="branch-badge">Flagship</div>
+      </div>
+
+      <div class="branch-content">
+        <h3 class="branch-name">Alpha Gym Maypajo – Main Branch</h3>
+        <p class="branch-area">Downtown City Center</p>
+        <p class="branch-address">📍 123 Main Street</p>
+
+        <div class="branch-actions">
+          <button class="branch-btn branch-view" type="button">View Branch</button>
+          <button class="branch-btn branch-map" type="button">View Map</button>
+        </div>
+      </div>
+    </article>
+
+    <article class="branch-card"
+      data-branch="Alpha Gym Recto"
+      data-img="./Images/alpha-pic-3.png"
+      data-map="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3860.9713339614473!2d120.98819207517526!3d14.600708877073874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c9cba91abbf5%3A0xe6c754dd77ebdf11!2sALPHA%20GRIND%20LAB%20RECTO!5e0!3m2!1sen!2sph!4v1771460161783!5m2!1sen!2sph">
+      <div class="branch-media">
+        <img src="./Images/alpha-pic-3.png" alt="Alpha Gym North Branch" loading="lazy">
+        <div class="branch-gradient"></div>
+        <div class="branch-badge">Elite</div>
+      </div>
+
+      <div class="branch-content">
+        <h3 class="branch-name">Alpha Gym Grind Lab Recto</h3>
+        <p class="branch-area">North District</p>
+        <p class="branch-address">📍 45 Iron Avenue</p>
+
+        <div class="branch-actions">
+          <button class="branch-btn branch-view" type="button">View Branch</button>
+          <button class="branch-btn branch-map" type="button">View Map</button>
+        </div>
+      </div>
+    </article>
+
+    <article class="branch-card"
+      data-branch="Alpha Gym Longos"
+      data-img="./Images/alpha-pic-3.png"
+      data-map="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61760.78675719174!2d120.88391724863283!3d14.6531502!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b5ff46b2a9cd%3A0x9abb6764e2e5d7d7!2sAlpha%20Grind%20Lab!5e0!3m2!1sen!2sph!4v1771460313324!5m2!1sen!2sph">
+      <div class="branch-media">
+        <img src="./Images/alpha-pic-4.png" alt="Alpha Gym South Branch" loading="lazy">
+        <div class="branch-gradient"></div>
+        <div class="branch-badge">Premium</div>
+      </div>
+
+      <div class="branch-content">
+        <h3 class="branch-name">Alpha Gym Pampano Longos </h3>
+        <p class="branch-area">South Business Park</p>
+        <p class="branch-address">📍 78 Power Road</p>
+
+        <div class="branch-actions">
+          <button class="branch-btn branch-view" type="button">View Branch</button>
+          <button class="branch-btn branch-map" type="button">View Map</button>
+        </div>
+      </div>
+    </article>
+
+    <article class="branch-card"
+      data-branch="Alpha Gym Malabon"
+      data-img="./Images/alpha-pic-5.png"
+      data-map="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3859.7511329707504!2d120.96556088050268!3d14.67005983884311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b56975f63d0b%3A0x6c85c9c945030582!2sAlpha%20Grind%20Lab%20-%20Tinajeros%20Malabon!5e0!3m2!1sen!2sph!4v1771460350618!5m2!1sen!2sph">
+      <div class="branch-media">
+        <img src="./Images/alpha-pic-3.png" alt="Alpha Gym East Branch" loading="lazy">
+        <div class="branch-gradient"></div>
+        <div class="branch-badge">Studio</div>
+      </div>
+
+      <div class="branch-content">
+        <h3 class="branch-name">Alpha Gym Malabon </h3>
+        <p class="branch-area">East Commercial Zone</p>
+        <p class="branch-address">📍 22 Titan Street</p>
+
+        <div class="branch-actions">
+          <button class="branch-btn branch-view" type="button">View Branch</button>
+          <button class="branch-btn branch-map" type="button">View Map</button>
+        </div>
+      </div>
+    </article>
+
+    <article class="branch-card"
+      data-branch="Alpha Gym Sangandaan Caloocan"
+      data-img="./Images/alpha-pic-1.png"
+      data-map="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3859.7511329707504!2d120.96556088050268!3d14.67005983884311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b58ce125829b%3A0xa453961c8c9a125b!2sAlpha%20Grind%20Lab%20-%20Sangandaan%20Caloocan!5e0!3m2!1sen!2sph!4v1771460421043!5m2!1sen!2sph">
+      <div class="branch-media">
+        <img src="./Images/alpha-pic-1.png" alt="Alpha Gym West Branch" loading="lazy">
+        <div class="branch-gradient"></div>
+        <div class="branch-badge">Select</div>
+      </div>
+
+      <div class="branch-content">
+        <h3 class="branch-name">Alpha Gym Sangandaan Caloocan </h3>
+        <p class="branch-area">Westside Plaza</p>
+        <p class="branch-address">📍 9 Strength Blvd</p>
+
+        <div class="branch-actions">
+          <button class="branch-btn branch-view" type="button">View Branch</button>
+          <button class="branch-btn branch-map" type="button">View Map</button>
+        </div>
+      </div>
+    </article>
+
+  </div>
+</section>
+
+<!-- BARBER SHOP (INSIDE ALPHA) -->
+<section class="barber-container" id="barber">
+  <div class="barber-wrap">
+
+    <div class="barber-left">
+      <p class="barber-kicker">Inside Alpha Gym</p>
+      <h2 class="barber-title">Barber Shop &amp; Grooming Lounge</h2>
+      <p class="barber-subtitle">
+        Train hard, look sharper. Get a clean fade, beard trim, or full grooming service —
+        right inside Alpha Gym. Premium tools. Elite barbers. No wasted time.
+      </p>
+
+      <ul class="barber-features">
+        <li>✂️ Fades &amp; Classic Cuts</li>
+        <li>🧔 Beard Trim &amp; Line-Up</li>
+        <li>🧴 Hair Wash &amp; Styling</li>
+        <li>🪒 Hot Towel Shave (Optional)</li>
+      </ul>
+
+      <div class="barber-actions">
+        <a href="./contact/contact.html" class="barber-btn barber-primary">Book a Cut</a>
+        <a href="#branches" class="barber-btn barber-secondary">Find a Branch</a>
+      </div>
+    </div>
+
+    <div class="barber-right">
+      <div class="barber-card">
+        <div class="barber-img">
+          <!-- Replace with your real barber image -->
+          <img class="barber-lightbox"  src="./Images/barber1.jpg" alt="Alpha Gym Barber Shop" loading="lazy" />
+          <div class="barber-overlay"></div>
+        </div>
+
+        <div class="barber-info">
+          <h3>Walk-in &amp; Appointment Available</h3>
+          <p>Open daily • Fast service • Members get priority</p>
+
+          <div class="barber-mini">
+            <div class="barber-mini-box">
+              <span class="mini-label">Avg. Time</span>
+              <span class="mini-value">20–40 mins</span>
+            </div>
+            <div class="barber-mini-box">
+              <span class="mini-label">Services</span>
+              <span class="mini-value">Cut • Trim • Shave</span>
+            </div>
+            <div class="barber-mini-box">
+              <span class="mini-label">Vibe</span>
+              <span class="mini-value">Luxury Lounge</span>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+
+<!-- MAP MODAL (POPUP) -->
+<div id="mapModal" class="map-modal" aria-hidden="true">
+  <div class="map-backdrop" id="mapBackdrop"></div>
+
+  <div class="map-dialog" role="dialog" aria-modal="true" aria-labelledby="mapTitle">
+    <div class="map-topbar">
+      <h3 id="mapTitle">Branch Location</h3>
+      <button class="map-close" id="mapClose" type="button" aria-label="Close map">&times;</button>
+    </div>
+
+    <div class="map-body">
+      <iframe id="mapFrame"
+        src=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+        allowfullscreen>
+      </iframe>
+    </div>
+  </div>
+</div>
+
+
+
     <!-- CTA -->
     <section class="cta-container">
       <h2 class="cta-title">Ready To Transform Your Body?</h2>
