--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
     <article class="branch-card"
       data-branch="Alpha Gym Maypajo – Main Branch"
-      data-img="./Images/branch-main.jpg"
+      data-img="./Images/alpha-pic-1.png"
       data-map="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3860.262802383937!2d120.97298157517585!3d14.641017876085758!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b55e5088d4d1%3A0x27dd5f121caca43d!2sAlpha%20Grind%20Lab%20-%20Maypajo%20Caloocan!5e0!3m2!1sen!2sph!4v1771460087852!5m2!1sen!2sph">
       <div class="branch-media">
         <img src="./Images/alpha-pic-1.png" alt="Alpha Gym Main Branch" loading="lazy">
